Added quiz-02 held on 2022-08-04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(qau_cs121_summer_2022)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(qau_cs121_summer_2022 2022-08-01-quiz-01/main.cpp)
+#add_executable(qau_cs121_summer_2022 2022-08-01-quiz-01/main.cpp)
+
+add_executable(qau_cs121_summer_2022 2022-08-04-quiz-02/main.cpp)
