Added assignment-03, quiz-03, midterm and final

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,29 @@
 cmake_minimum_required(VERSION 3.23)
 project(qau_cs121_summer_2022)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
 
 #add_executable(qau_cs121_summer_2022 2022-08-01-quiz-01/main.cpp)
-
 #add_executable(qau_cs121_summer_2022 2022-08-04-quiz-02/main.cpp)
+#add_executable(qau_cs121_summer_2022 2022-08-11-quiz-03/main.cpp)
+#add_executable(qau_cs121_summer_2022 2022-08-15-quiz-04/main.cpp)
+add_executable(qau_cs121_summer_2022 2022-08-29-quiz-05/main.cpp)
 
 #add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-01.cpp)
 #add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-02.cpp)
 #add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-03.cpp)
 #add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-04.cpp)
 #add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-05.cpp)
-add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-06.cpp)
+#add_executable(qau_cs121_summer_2022 2022-08-08-assignment-01/question-06.cpp)
+
+#add_executable(qau_cs121_summer_2022 2022-08-18-midterm/question-01.cpp)
+#add_executable(qau_cs121_summer_2022 2022-08-18-midterm/question-02.cpp)
+#add_executable(qau_cs121_summer_2022 2022-08-18-midterm/question-03.cpp)
+
+#add_executable(qau_cs121_summer_2022 2022-08-27-assignment-03/question-01.cpp)
+
+#add_executable(qau_cs121_summer_2022 2022-09-13-final/question-01.cpp)
+#add_executable(qau_cs121_summer_2022 2022-09-13-final/question-02.cpp)
+#add_executable(qau_cs121_summer_2022 2022-09-13-final/question-03.cpp)
+#add_executable(qau_cs121_summer_2022 2022-09-13-final/question-04.cpp)
+#add_executable(qau_cs121_summer_2022 2022-09-13-final/question-05.cpp)
